# template-cmake-arduino-controllino

./: .gitignore  CMakeLists.txt  README.md  blink.cpp
cmake/: arduino_core.cmake
cmake/libraries.cmake/: arduino_controllino.cmake  arduino_json.cmake  arduino_modbus_controllino.cmake  arduino_rs485.cmake  dallastemperature.cmake  eeprom.cmake  ethernet.cmake  ntpclient.cmake  onewire.cmake  simple_utility_library.cmake  simple_webserver.cmake  spi.cmake  truerandom.cmake
cmake/toolchain/: avr.toolchain.cmake  controllino.mega.toolchain.cmake  leonardo.toolchain.cmake  mega.toolchain.cmake  uno.toolchain.cmake
libraries/: README.md
libraries/Adafruit_TMP006/: Adafruit_TMP006.h
libraries/ArduinoModbus_Controllino/src/: ArduinoModbus.h  ModbusClient.cpp  ModbusClient.h  ModbusRTUClient.h  ModbusRTUServer.h  ModbusServer.h  ModbusTCPClient.h  ModbusTCPServer.h
libraries/ArduinoModbus_Controllino/src/libmodbus/: modbus-private.h  modbus-rtu-private.h  modbus-rtu.h  modbus-tcp-private.h  modbus-tcp.h  modbus-version.h  modbus.c  modbus.h
libraries/ArduinoRS485_Controllino/src/: ArduinoRS485.h  RS485.cpp  RS485.h
libraries/CONTROLLINO_Library.old/: Controllino.h
libraries/NTPClient/: CMakeLists.txt
libraries/Simple-Utility-Library/src/: SimpleHttp.cpp  SimplePrint.h  SimpleUtils.cpp
libraries/Simple-WebServer-Library/: .library.json
libraries/Simple-WebServer-Library/src/: SimpleWebServer.cpp  SimpleWebServer.h
libraries/TrueRandom/: TrueRandom.cpp  TrueRandom.h
libraries/threadhandler/: configuringMacros.h
(+8 files in other folders)
